crates/cognicode-macros/tests/newtype-ui/newtype_on_regular_struct.stderr
error: expected attribute, found derive macro `newtype`
 --> tests/newtype-ui/newtype_on_regular_struct.rs
  |
  | #[newtype]
  |   ^^^^^^^ not an attribute
